--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,7 @@
               "src/assets"
             ],
             "styles": [
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
             "scripts": []
@@ -102,5 +103,8 @@
       }
     }
   },
-  "defaultProject": "blog-angular"
+  "defaultProject": "blog-angular",
+  "cli": {
+    "analytics": false
+  }
 }
