--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blog-angular",
+  "name": "blogangular",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -10,34 +10,37 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.1.0",
-    "@angular/common": "~13.1.0",
-    "@angular/compiler": "~13.1.0",
-    "@angular/core": "~13.1.0",
-    "@angular/forms": "~13.1.0",
-    "@angular/material": "^16.1.1",
-    "@angular/platform-browser": "~13.1.0",
-    "@angular/platform-browser-dynamic": "~13.1.0",
-    "@angular/router": "~13.1.0",
-    "@ngrx/effects": "^16.0.1",
-    "@ngrx/store": "^16.0.1",
-    "@ngrx/store-devtools": "^16.0.1",
+    "@angular/animations": "~14.2.7",
+    "@angular/cdk": "^14.2.7",
+    "@angular/common": "~14.2.7",
+    "@angular/compiler": "~14.2.7",
+    "@angular/core": "~14.2.7",
+    "@angular/forms": "~14.2.7",
+    "@angular/material": "^14.2.7",
+    "@angular/platform-browser": "~14.2.7",
+    "@angular/platform-browser-dynamic": "~14.2.7",
+    "@angular/router": "~14.2.7",
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "@ngrx/effects": "^14.2.7",
+    "@ngrx/store": "^14.2.7",
+    "@ngrx/store-devtools": "^14.2.7",
+    "@ngtools/webpack": "^14.2.7",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.1.3",
-    "@angular/cli": "~13.1.3",
-    "@angular/compiler-cli": "~13.1.0",
+    "@angular-devkit/build-angular": "~14.2.7",
+    "@angular/cli": "~14.2.7",
+    "@angular/compiler-cli": "~14.2.7",
     "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.20.55",
     "jasmine-core": "~3.10.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.1.0",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.5.2"
+    "typescript": "~4.6.3"
   }
 }
