--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
   "private": true,
@@ -21,7 +20,9 @@
     "@angular/platform-browser-dynamic": "~14.2.7",
     "@angular/router": "~14.2.7",
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "@ngrx/data": "^14.2.7",
     "@ngrx/effects": "^14.2.7",
+    "@ngrx/entity": "^14.2.7",
     "@ngrx/store": "^14.2.7",
     "@ngrx/store-devtools": "^14.2.7",
     "@ngtools/webpack": "^14.2.7",
