--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~14.2.7",
     "@angular/router": "~14.2.7",
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "@ionic/angular": "^7.1.0",
     "@ngrx/data": "^14.2.7",
     "@ngrx/effects": "^14.2.7",
     "@ngrx/entity": "^14.2.7",
